--- a/src/componentes/Menu/Menu.module.scss
+++ b/src/componentes/Menu/Menu.module.scss
@@ -7,6 +7,7 @@ body,
 html {
   max-width: 1200px;
   margin: auto;
+
 }
 
 ul {
@@ -28,10 +29,33 @@ a {
 li {
   font-family: sans-serif;
   font-size: 20px;
+  transition: 0.2s;
+  scroll-behavior: smooth;
+
  
 
 }
 
 h1 {
   text-align: center;
+}
+
+
+ 
+p:target {
+  background-color: gold;
+}
+
+ 
+html {
+  scroll-behavior: smooth;
+}
+
+ 
+html {
+  scroll-behavior: smooth;
+}
+ 
+:target {
+  scroll-margin-top: .8em;
 }
