--- a/src/componentes/Menu/Menu.module.scss
+++ b/src/componentes/Menu/Menu.module.scss
@@ -59,3 +59,14 @@ html {
 :target {
   scroll-margin-top: .8em;
 }
+
+ 
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
+ 
+:target {
+  scroll-margin-top: .8em;
+}
